...

                  BlocProvider.of<ProductsBloc>(context).add(
                    UpdateProductEvent(updatedProduct),
                  );
                  Navigator.pop(context);
                },
                child: const Text('Save'),
              ),
            ],
          ),
        ),
      ),
    );
...
